# libcimbar_cli

./: .gitignore  CMakeLists.txt  README.md  install_and_build.ps1
.trae/documents/: aardio-gui-plan.md  dll-32bit-plan.md  fix-chinese-encoding-and-readme-plan.md  github-release-plan.md  libcimbar-cli-windows-port-plan.md
gui/: camera.aardio  decoder.aardio  encoder.aardio  libcimbar_dll.aardio  main.aardio
libcimbar_ref/: README.md
src/cli/: CMakeLists.txt  libcimbar_cli.cpp
src/dll/: CMakeLists.txt  libcimbar_decode.cpp  libcimbar_encode.cpp  libcimbar_export.h
